[package]
name = "seify-hackrfone"
version = "0.1.0"
edition = "2021"
authors = ["Troy Neubauer <troy@foxhunter.ai>"]

[dependencies]
atomic_enum = "0.3.0"
futures-lite = "2.3.0"
log = "0.4.22"
# TODO: waiting on https://github.com/kevinmehall/nusb/issues/84 for file descriptor wrapping support
# nusb = { git = "https://github.com/kevinmehall/nusb.git", rev = "809228038f43de2d7a636825d17439b445f612b7" }
nusb = "0.1.10"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
