[package]
name = "seify-hackrfone"
version = "0.2.0"
edition = "2024"
authors = ["Troy Neubauer <troy@foxhunter.ai>"]
repository = "https://github.com/MerchGuardian/seify-hackrfone"
readme = "README.md"
documentation = "https://docs.rs/seify-hackrfone/"
description = "Fully Rust native HackRF one driver, powered by nusb"
license = "MIT"
keywords = ["sdr", "rf", "hackrf"]
categories = ["api-bindings"]

[dependencies]
futures-lite = "2.3.0"
log = "0.4.22"
nusb = "0.1.11"
thiserror = "1.0.63"

[dev-dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
